--- a/crud_flutter/pubspec.yaml
+++ b/crud_flutter/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^1.1.2
+  sqflite: ^2.0.0+4
+  camera: ^0.10.5+5
+  path_provider: ^2.0.9
 
 dev_dependencies:
   flutter_test:
